Updated/Added simply-static-1-1722871483

--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@ function setupContact() {
 
 function setupNav() {
     'use strict';
-    if ($('#nav').hasClass('setup-complete')) {
-        return
-    }
+    // if ($('#nav').hasClass('setup-complete')) {
+    //     return
+    // }
 
     $('#menu-button').on('click', function (e) {
         e.preventDefault();
@@ -847,9 +847,8 @@ setupNav();</script>
                 setupSlideshow(this);
             })
         }
-    });
-
-    setupNav();</script>
+        setupNav();
+    });</script>
 	<!-- #main -->
 
 <!-- #page -->
