--- a/japan-public-transit-guide/index.html
+++ b/japan-public-transit-guide/index.html
@@ -177,9 +177,9 @@ function setupContact() {
 
 function setupNav() {
     'use strict';
-    if ($('#nav').hasClass('setup-complete')) {
-        return
-    }
+    // if ($('#nav').hasClass('setup-complete')) {
+    //     return
+    // }
 
     $('#menu-button').on('click', function (e) {
         e.preventDefault();
