Updated/Added simply-static-1-1723003611

--- a/japan-public-transit-guide/index.html
+++ b/japan-public-transit-guide/index.html
@@ -597,7 +597,11 @@ setupNav();</script>
 <div class="tags-links">Tagged <a href="/tag/japan/" rel="tag">Japan</a>, <a href="/tag/public-transit/" rel="tag">Public Transit</a>, <a href="/tag/travel-tips/" rel="tag">Travel Tips</a>
 </div>	</footer><!-- .entry-footer -->
 </article><!-- #post-51 -->
-		</div>
+
+	<nav class="navigation post-navigation" aria-label="Posts">
+		<h2 class="screen-reader-text">Post navigation</h2>
+		<div class="nav-links"><div class="nav-next"><a href="/my-complete-2-week-itinerary-from-my-epic-trip-to-norway/" rel="next"><span class="nav-subtitle">Next:</span> <span class="nav-title">My Complete 2-Week Itinerary from my EPIC trip to Norway</span></a></div></div>
+	</nav>		</div>
 	</main><!-- #main -->
 
 
