Updated/Added simply-static-1-1723003947

--- a/my-complete-2-week-itinerary-from-my-epic-trip-to-norway/index.html
+++ b/my-complete-2-week-itinerary-from-my-epic-trip-to-norway/index.html
@@ -867,11 +867,7 @@ setupNav();</script>
 <div class="tags-links">Tagged <a href="/tag/itineraries/" rel="tag">Itineraries</a>, <a href="/tag/norway/" rel="tag">Norway</a>, <a href="/tag/travel-tips/" rel="tag">Travel Tips</a>
 </div>	</footer><!-- .entry-footer -->
 </article><!-- #post-96 -->
-
-	<nav class="navigation post-navigation" aria-label="Posts">
-		<h2 class="screen-reader-text">Post navigation</h2>
-		<div class="nav-links"><div class="nav-previous"><a href="/japan-public-transit-guide/" rel="prev"><span class="nav-subtitle">Previous:</span> <span class="nav-title">Exploring Japan Like a Local: A Complete Guide to Japan’s Public Transit</span></a></div></div>
-	</nav>		</div>
+		</div>
 	</main><!-- #main -->
 
 
