Updated/Added simply-static-1-1723046259

--- a/norway-adventure-itinerary/index.html
+++ b/norway-adventure-itinerary/index.html
@@ -263,6 +263,10 @@ setupNav();</script>
 </div>
 
 
+<p></p>
+
+
+
 <p>Hey all! I had a lot of people asking for my specific itinerary from my trip to Norway. Knowing what I like when reading an itinerary, I made it short, sweet, and with minimal side notes. This is also the honest version of where I went and what I did &#8211; both the exciting and the &#8220;change-of-plans&#8221; experiences. When inclement weather or closures happened, I wanted to incorporate what I would have done or other suggestions for you to help plan your trip. There are also helpful links to hotels, companies, or businesses that I visited while there. If you have any questions, feel free to leave a comment or shoot me a DM on <a href="https://www.instagram.com/michellecholiman/" data-type="URL" data-id="https://www.instagram.com/michellecholiman/" target="_blank" rel="noreferrer noopener">Instagram</a>!</p>
 
 
@@ -379,7 +383,7 @@ setupNav();</script>
 
 
 
-<p>Get in line for the boar 15 minutes early (note where the captain is facing and grab a spot by the rail facing the same direction.&nbsp;</p>
+<p>Get in line for the boat 15 minutes early (note where the captain is facing and grab a spot by the rail facing the same direction. </p>
 
 
 
@@ -799,10 +803,6 @@ setupNav();</script>
 
 
 <li>Delp</li>
-
-
-
-<li>
 </ul>
 
 
