--- a/norway-adventure-itinerary/index.html
+++ b/norway-adventure-itinerary/index.html
@@ -5,10 +5,10 @@
 	<meta name="viewport" content="height=device-height, width=device-width, initial-scale=1">
 	<base href="/">
 
-	<title>My Complete 2-Week Itinerary from my EPIC trip to Norway &#8211; Michelle Holiman</title>
+	<title>My Complete 2-Week Itinerary from my EPIC trip to Norway &#8211; Michelle Holiman2</title>
 <meta name="robots" content="max-image-preview:large">
 <link rel="dns-prefetch">
-<link rel="alternate" type="application/rss+xml" title="Michelle Holiman &raquo; Feed" href="/feed/">
+<link rel="alternate" type="application/rss+xml" title="Michelle Holiman2 &raquo; Feed" href="/feed/">
 <style id="wp-emoji-styles-inline-css">img.wp-smiley, img.emoji {
 		display: inline !important;
 		border: none !important;
