Updated/Added simply-static-1-1724350076

--- a/norway-adventure-itinerary/index.html
+++ b/norway-adventure-itinerary/index.html
@@ -893,7 +893,11 @@ setupNav();</script>
 <div class="tags-links">Tagged <a href="/tag/itineraries/" rel="tag">Itineraries</a>, <a href="/tag/norway/" rel="tag">Norway</a>, <a href="/tag/travel-tips/" rel="tag">Travel Tips</a>
 </div>	</footer><!-- .entry-footer -->
 </article><!-- #post-96 -->
-		</div>
+
+	<nav class="navigation post-navigation" aria-label="Posts">
+		<h2 class="screen-reader-text">Post navigation</h2>
+		<div class="nav-links"><div class="nav-next"><a href="/what-to-pack-for-your-norway-trip/" rel="next"><span class="nav-subtitle">Next:</span> <span class="nav-title">What Clothes to Pack for Your Norway Trip</span></a></div></div>
+	</nav>		</div>
 	</main><!-- #main -->
 
 
