Updated/Added simply-static-1-1736876186

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ setupNav();</script>
 <div class="wp-block-column is-layout-flow wp-block-column-is-layout-flow" style="flex-basis:70%">
 <h2 class="wp-block-post-title"><a href="/blog/japan-public-transit-guide/" target="_self">Exploring Japan Like a Local: A Complete Guide to Japan’s Public Transit</a></h2>
 
-<div class="wp-block-post-excerpt"><p class="wp-block-post-excerpt__excerpt">30 Nov 2023 Note from Michelle: This article was written November of 2023, all prices and price conversions were made at this time and are subject to change. Keep an eye on current currency equivalents if you are planning a trip to Japan. The&nbsp;ELK&nbsp;app is a great tool to check these. &nbsp;Japan has one of&hellip; </p></div>
+<div class="wp-block-post-excerpt"><p class="wp-block-post-excerpt__excerpt">Written 30 Nov 2023 Updated 14 Jan 2025Note from Michelle: This article was first written November of 2023, all prices and price conversions were made at this time and are subject to change. Keep an eye on current currency equivalents if you are planning a trip or using Japan&#8217;s public transit system. The ELK app is a&hellip; </p></div>
 </div>
 </div>
 
